# GravityMicroServices-Archive

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLEANUP_AFTER_MIGRATION.md  CLEANUP_REPORT.md  COMPLETE_MIGRATION_GUIDE_FA.md  CONTRIBUTING.md  FRAMEWORK_SUMMARY.md  GITHUB_FREE_OPTIONS.md  GIT_DECISION_SIMPLE_FA.md  GIT_SITUATION_ANALYSIS.md  LICENSE  MIGRATION_COMPLETE_REPORT.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  Makefile  POST_MIGRATION_GUIDE.md  PROJECT_STATUS.md  PYTHON_VERSION.md  README.md  SERVICES_INDEX.md  SERVICES_READINESS_PLAN.md  SERVICE_TEMPLATE.md  TEAM_PROMPT.md  TEAM_START_GUIDE.md  TESTING_IMPLEMENTATION_REPORT.md  TODO.md  WORK_COMPLETED.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup-independent-repos.ps1
01-common-library/: .env.example  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  TEAM_PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml
02-service-discovery/: .env.example  Dockerfile  README.md  TEAM_PROMPT.md  docker-compose.yml  pyproject.toml  pytest.ini
02-service-discovery/app/: __init__.py  config.py  main.py
02-service-discovery/app/api/: __init__.py
02-service-discovery/app/api/v1/: __init__.py  services.py
02-service-discovery/app/core/: __init__.py  consul_client.py  database.py  load_balancer.py  metrics.py  redis_client.py
02-service-discovery/app/models/: service.py
02-service-discovery/app/schemas/: __init__.py
02-service-discovery/app/services/: __init__.py  registry_service.py
02-service-discovery/scripts/: init-databases.sql  init-db.sql
02-service-discovery/tests/: INTEGRATION_TESTING.md  conftest.py  test_api_endpoints.py  test_consul_client.py  test_database.py  test_integration.py  test_load_balancer.py  test_main.py  test_metrics.py  test_redis_client.py  test_registry_service.py
03-api-gateway/: .env.example  README.md  docker-compose.yml  pyproject.toml
03-api-gateway/app/: config.py
03-api-gateway/app/core/: circuit_breaker.py  service_registry.py
03-api-gateway/tests/: __init__.py  test_main.py  test_rate_limiter.py  test_service_registry.py
04-config-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
05-auth-service/: README.md  pyproject.toml
06-user-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
06-user-service/.github/workflows/: cd.yml  ci.yml
06-user-service/alembic/: env.py
06-user-service/alembic/versions/: 001_initial_migration.py
06-user-service/app/: __init__.py  config.py  main.py
06-user-service/app/api/: __init__.py
06-user-service/app/api/v1/: __init__.py  preferences.py  profiles.py  router.py  sessions.py
06-user-service/app/core/: __init__.py  database.py  exceptions.py  security.py  service_discovery.py
06-user-service/app/models/: __init__.py  base.py  user_preference.py  user_profile.py  user_session.py
06-user-service/app/schemas/: __init__.py  user_preference.py  user_profile.py  user_session.py
06-user-service/app/services/: __init__.py  preference_service.py  profile_service.py  session_service.py
06-user-service/scripts/: setup_database.ps1  setup_database.py  setup_database.sh
06-user-service/tests/: __init__.py  conftest.py  test_auth_integration.py  test_integration.py  test_models.py  test_preferences.py  test_profiles.py  test_services.py  test_sessions.py
07-notification-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
07-notification-service/.github/workflows/: cd.yml  ci.yml
07-notification-service/alembic/: env.py
07-notification-service/app/: __init__.py  config.py  main.py
07-notification-service/app/api/v1/: analytics.py  email.py  history.py  templates.py
07-notification-service/app/core/: database.py
07-notification-service/app/models/: __init__.py  base.py  device_token.py  notification.py  template.py
07-notification-service/app/providers/: __init__.py  email_provider.py
07-notification-service/app/schemas/: notification.py  template.py
07-notification-service/app/services/: notification_service.py  retry_service.py  template_service.py
07-notification-service/scripts/: test_email.py
07-notification-service/tests/: conftest.py  test_email_provider.py
08-email-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
09-sms-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
10-file-storage-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
11-permission-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
12-session-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
13-audit-log-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
14-cache-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
15-payment-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
48-tax-service/: LICENSE  (+6 more)
gravity-template-service/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
gravity-template-service/.github/workflows/: cd.yml  ci.yml
gravity-template-service/app/: __init__.py  config.py  dependencies.py  main.py
gravity-template-service/app/api/: __init__.py
gravity-template-service/app/api/v1/: endpoints.py  router.py
gravity-template-service/app/core/: __init__.py  database.py  exceptions.py  logging_config.py  redis_client.py  security.py
gravity-template-service/app/models/: __init__.py  example.py
gravity-template-service/app/schemas/: __init__.py  example.py  response.py
gravity-template-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml.example  service.yaml
gravity-template-service/tests/: __init__.py  conftest.py  test_main.py
(+571 files in other folders)
