[tool.poetry]
name = "gravity-microservices"
version = "1.0.0"
description = "Enterprise-grade microservices platform built by elite development team"
authors = ["Gravity Elite Team <team@gravity.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/gravity-microservices"
repository = "https://github.com/yourusername/gravity-microservices"
keywords = ["microservices", "fastapi", "postgresql", "redis", "rabbitmq"]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"

# Database - PostgreSQL
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

# Redis
redis = {extras = ["hiredis"], version = "^5.0.1"}
hiredis = "^2.2.3"

# Message Queue
celery = {extras = ["redis"], version = "^5.3.4"}
kombu = "^5.3.4"
pika = "^1.3.2"
aiokafka = "^0.10.0"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
cryptography = "^41.0.7"

# HTTP Client
httpx = "^0.25.2"
aiohttp = "^3.9.1"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
orjson = "^3.9.10"
ujson = "^5.9.0"

# Monitoring & Observability
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
python-json-logger = "^2.0.7"

# Validation
email-validator = "^2.1.0"
phonenumbers = "^8.13.27"

# Service Discovery
python-consul = "^1.1.0"

# AWS (for cloud storage)
boto3 = "^1.34.12"
aioboto3 = "^12.3.0"

# Background Tasks
apscheduler = "^3.10.4"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.2"

# API Documentation
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
testcontainers = {extras = ["postgres", "redis"], version = "^3.7.1"}
faker = "^21.0.0"
factory-boy = "^3.3.0"

# Load Testing
locust = "^2.20.0"

# Code Quality
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.7.1"
bandit = "^1.7.6"
pre-commit = "^3.6.0"

# Debugging
ipython = "^8.19.0"
ipdb = "^0.13.13"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"

[tool.poetry.group.test.dependencies]
httpx = "^0.25.2"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
