# ================================================================================
# FILE IDENTITY (شناسنامه فایل)
# ================================================================================
# Project      : Gravity MicroServices Platform
# File         : service-discovery/pyproject.toml
# Description  : Python project configuration and dependencies for Service
#                Discovery microservice using HashiCorp Consul
# Language     : TOML
# Framework    : FastAPI / Python 3.11+
#
# ================================================================================
# AUTHORSHIP & CONTRIBUTION (مشارکت‌کنندگان)
# ================================================================================
# Primary Author    : Elena Volkov (Backend & Integration Lead)
# Contributors      : Lars Björkman (DevOps), Dr. Fatima Al-Mansouri (Architecture)
# Team Standard     : Elite Engineers (IQ 180+, 15+ years experience)
#
# ================================================================================
# TIMELINE & EFFORT (زمان‌بندی و تلاش)
# ================================================================================
# Created Date      : 2025-11-07 16:00 UTC
# Development Time  : 30 minutes
# Total Cost        : $75.00 USD
#
# ================================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-service-discovery"
version = "1.0.0"
description = "Service Discovery microservice with HashiCorp Consul integration"
readme = "README.md"
requires-python = "~=3.12.10"
license = {text = "MIT"}
authors = [
    {name = "Elena Volkov", email = "elena.volkov@gravity.platform"},
]
keywords = ["microservices", "service-discovery", "consul", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-consul2>=0.1.5",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/GravityWavesMl/GravityMicroServices"
Documentation = "https://github.com/GravityWavesMl/GravityMicroServices/tree/main/service-discovery"
Repository = "https://github.com/GravityWavesMl/GravityMicroServices"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
